--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,17 @@ h1 {
   background-color: #C2185B;
   max-width: 1280px;
   width: 100%;
-  height: 40px;
+  height: 70px;
   position: fixed;
   z-index: 15;
+  top: 20px;
+  bottom: 20px;
 }
 
 .frete p {
   color: #fff;
+  width: 100%;
+  height: 70px;
   text-transform: uppercase;
   z-index: 1;
   position: relative;
