--- a/css/style.css
+++ b/css/style.css
@@ -49,22 +49,19 @@ h1 {
   background-color: #C2185B;
   max-width: 1280px;
   width: 100%;
-  height: 70px;
-  position: fixed;
+  height: 60px;
+  position: sticky;
   z-index: 15;
-  top: 20px;
-  bottom: 20px;
+  top: 0px;
 }
 
 .frete p {
   color: #fff;
-  height: 70px;
+  font-weight: bold;
   font-size: 2rem;
-  padding: 5px 10px;
-  margin: 5px 0;
+  padding: 10px 0px;
   text-transform: uppercase;
   z-index: 1;
-  position: relative;
   text-align: center;
 }
 
