--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ button[type="submit"] {
   font-weight: 800;
   background-color: #c2185b;
   padding: 8px 0;
-  margin: 15px 0;;
+  margin: 20px 0;;
   width: 100%;
 }
 
@@ -213,6 +213,7 @@ button[type="submit"]:hover {
   transition: all 3s;
   background-color: #fff;
   color: #C2185B;
+  box-shadow: 2px 9px 21px -1px rgba(128,123,123,0.59);
 }
 
 footer {
